<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QQLogin">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:contentDescription="@string/loginIcon"
        android:src="@drawable/qq_logo"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:background="@drawable/qqshape"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/idNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#f2f3f7"
            android:gravity="center"
            android:hint="@string/ID"
            android:inputType="number"
            android:maxLines="1"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/delete"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="20dp"
            android:background="#f2f3f7"
            android:src="@drawable/delete"
            android:visibility="invisible" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:background="@drawable/qqshape"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline9"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/qq_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:background="#f2f3f7"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="20sp" />

        <ToggleButton
            android:id="@+id/eye"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="20dp"
            android:background="@drawable/visibility_toggle_button"
            android:textOff=""
            android:textOn=""
            android:visibility="invisible" />
    </FrameLayout>

    <androidx.constraintlayout.helper.widget.Layer
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="frameLayout1,frameLayout2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="166dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="qq_forget, line, qq_register"
        app:flow_wrapMode="chain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline11"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/qq_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:text="@string/forget"
        android:textColor="@color/black"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/line"
        android:layout_width="1dp"
        android:layout_height="10dp"
        android:layout_marginStart="50dp"
        android:background="#f2f3f7"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/qq_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:background="#00000000"
        android:text="@string/regist"
        android:textColor="@color/black"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/loginbt"
        android:enabled="false"
        android:foreground="@drawable/login"
        android:foregroundGravity="center"

        app:layout_constraintBottom_toTopOf="@+id/guideline15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.81" />

</androidx.constraintlayout.widget.ConstraintLayout>